--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       </ul>
     </main>
     <footer>
-      <p>&copy; 2023 MyCourseCatalog.com</p>
+      <p>&copy; Shreas</p>
     </footer>
   </body>
 </html>
